<resources>
    <string name="app_name">ATmMachineApp</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="card_number">Card number</string>
    <string name="withdraw_cash">Widthraw cash</string>
    <string name="create_card">Create card</string>
    <string name="pin">pin</string>
    <string name="your_name">Your name</string>
    <string name="make_widthrawal">Make widthrawal</string>
    <string name="find_card">Find card</string>
    <string name="amount">amount</string>
    <string name="amount_withdrawn">Amount withdrawn</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="account_balance">Account balance</string>
    <string name="check_balance">check balance</string>
</resources>
