<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WidthrawMoneyFragment">


    <TextView
            android:text="@string/withdraw_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_purple"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:src="@mipmap/atm_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.668"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/card_number"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="64dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintVertical_bias="0.306"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText" app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="0.333"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/buton_background"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="260dp" app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:textColor="@android:color/white"
            android:background="@drawable/buton_background"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/editText2" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.337"/>
</androidx.constraintlayout.widget.ConstraintLayout>