<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateCardFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.915"
            app:passwordToggleEnabled="true" android:id="@+id/textInputLayout">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                android:inputType="numberPassword"
        android:id="@+id/pin"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:src="@mipmap/debit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintVertical_bias="0.525"/>
    <TextView
            tools:text="1256362827278t473739870408"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.646"/>
    <View
            android:layout_width="156dp"
            android:layout_height="23dp"
            android:id="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.534"
            android:background="#1526FF"/>
    <TextView
            android:textColor="@android:color/white"
            tools:text="Khalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view" app:layout_constraintBottom_toBottomOf="@+id/view"
            android:layout_marginBottom="3dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.448" app:layout_constraintVertical_bias="0.958"/>
    <TextView
            android:text="@string/create_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_purple"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.257"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.736">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
        android:id="@+id/name_text"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>